# transitive-typecheck-repro

./: .bazelrc  .bazelversion  .gitignore  BUILD  MODULE.aspect  MODULE.bazel  README.bazel.md  README.md  package.json  pnpm-lock.yaml
.aspect/gazelle/: shell.axl
githooks/: pre-commit
tools/: BUILD  tools.lock.json
tools/lint/: BUILD  linters.bzl
